--- a/BrokenCode/WeeklySchedule/index.html
+++ b/BrokenCode/WeeklySchedule/index.html
@@ -33,53 +33,53 @@
             </div>
             <div class="part__day">
                 <span class="time">8am <br> - <br> 12pm</span>
-                <div class="task"></div>
-                <div class="task"></div>
-                <div class="task"></div>
-                <div class="task"></div>
-                <div class="task"></div>
-                <div class="task"></div>
-                <div class="task"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
             </div>
             <div class="part__day">
                 <span class="time">12pm <br> - <br> 2pm</span>
-                <div class="task"></div>
-                <div class="task"></div>
-                <div class="task"></div>
-                <div class="task"></div>
-                <div class="task"></div>
-                <div class="task"></div>
-                <div class="task"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
             </div>
             <div class="part__day">
                 <span class="time">2pm <br> - <br> 6pm</span>
-                <div class="task"></div>
-                <div class="task"></div>
-                <div class="task"></div>
-                <div class="task"></div>
-                <div class="task"></div>
-                <div class="task"></div>
-                <div class="task"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
             </div>
             <div class="part__day">
                 <span class="time">6pm <br> - <br> 9pm</span>
-                <div class="task"></div>
-                <div class="task"></div>
-                <div class="task"></div>
-                <div class="task"></div>
-                <div class="task"></div>
-                <div class="task"></div>
-                <div class="task"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
             </div>
             <div class="part__day">
                 <span class="time">9pm <br> - <br> 11pm</span>
-                <div class="task"></div>
-                <div class="task"></div>
-                <div class="task"></div>
-                <div class="task"></div>
-                <div class="task"></div>
-                <div class="task"></div>
-                <div class="task"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
+                <div class="task" style="background-color: white;"></div>
             </div>
         </div>
 
